--- a/src/components/elements/Player.css
+++ b/src/components/elements/Player.css
@@ -11,8 +11,9 @@
 
 .player__button {
     width: 9rem;
+    min-width: 9rem;
     height: 9rem;
-    margin-right: 1rem;
+    margin-right: 2rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -55,7 +56,7 @@
 }
 
 audio {
-    width: 300px;
+    width: auto;
     height: 54px;
 }
 
@@ -65,7 +66,7 @@ audio {
     align-items: stretch;
     flex-direction: column;
     padding-top: 2rem;
-    width: 35rem;
+    width: 100%;
 }
 
 .actions__player_right {
@@ -83,8 +84,8 @@ audio {
 }
 
 .actions__player_right .player__button {
-    width: 6rem;
-    height: 6rem;
+    width: 9rem;
+    height: 9rem;
     margin-right: 1rem;
     display: flex;
     align-items: center;
@@ -127,7 +128,6 @@ audio {
     position: relative;
     width: 100%;
     height: 5px;
-    background: linear-gradient(270deg, #7E55B3 0%, #A769C4 100.02%);
     font: 1em/1 arial,sans-serif;
     -webkit-appearance: none;
     border-radius: 5px;
@@ -135,9 +135,10 @@ audio {
 }
 
 input[type=range] {
-    -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
-    width: 100%; /* Specific width is required for Firefox. */
-    background: transparent; /* Otherwise white in Chrome */
+    --background-size: 0;
+    -webkit-appearance: none;
+    width: 100%;
+    background: transparent;
 }
 
 input[type=range]::-webkit-slider-thumb {
@@ -145,20 +146,17 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 input[type=range]:focus {
-    outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+    outline: none;
 }
 
 input[type=range]::-ms-track {
     width: 100%;
     cursor: pointer;
-
-    /* Hides the slider so custom styles can be added */
     background: transparent;
     border-color: transparent;
     color: transparent;
 }
 
-/* Special styling for WebKit/Blink */
 input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
     height: 9px;
@@ -166,7 +164,7 @@ input[type=range]::-webkit-slider-thumb {
     border-radius: 50%;
     background: #ffffff;
     cursor: pointer;
-    margin-top: -2px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+    margin-top: -2px;
 }
 
 input[type=range]:hover::-webkit-slider-thumb {
@@ -175,84 +173,14 @@ input[type=range]:hover::-webkit-slider-thumb {
     margin-top: -6px;
 }
 
-/* All the same stuff for Firefox */
-input[type=range]::-moz-range-thumb {
-    height: 9px;
-    width: 9px;
-    border-radius: 50%;
-    background: #ffffff;
-    cursor: pointer;
-}
-
-/* All the same stuff for IE */
-input[type=range]::-ms-thumb {
-    height: 9px;
-    width: 9px;
-    border-radius: 50%;
-    background: #ffffff;
-    cursor: pointer;
-}
-
 input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
     height: 5px;
     cursor: pointer;
-    background: #494D77;
+    background: linear-gradient(to right, #7E55B3, #A769C4), #494D77;
+    background-size: var(--background-size, 0%) 100%;
+    background-repeat: no-repeat;
     border-radius: 5px;
-}
-
-input[type=range]:focus::-webkit-slider-runnable-track {
-    background: linear-gradient(270deg, #7E55B3 0%, #A769C4 100.02%);
-}
-
-input[type=range]::-moz-range-track {
-    width: 100%;
-    height: 5px;
-    cursor: pointer;
-    background: linear-gradient(270deg, #7E55B3 0%, #A769C4 100.02%);
-    border-radius: 5px;
-}
-
-input[type=range]::-ms-track {
-    width: 100%;
-    height: 5px;
-    cursor: pointer;
-    background: transparent;
-    border-color: transparent;
-    color: transparent;
-}
-input[type=range]::-ms-fill-lower {
-    background: #494D77;
-    border-radius: 5px;
-}
-input[type=range]:focus::-ms-fill-lower {
-    background: linear-gradient(270deg, #494D77 0%, #494D77 100.02%);
-}
-input[type=range]::-ms-fill-upper {
-    background: #494D77;
-    border-radius: 5px;
-}
-input[type=range]:focus::-ms-fill-upper {
-    background: linear-gradient(270deg, #7E55B3 0%, #A769C4 100.02%);
-}
-
-.bubble {
-    background: #373b62;
-    color: white;
-    padding: 4px 12px;
-    position: absolute;
-    border-radius: 4px;
-    left: 50%;
-    transform: translateX(50%);
-}
-.bubble::after {
-    content: "";
-    position: absolute;
-    width: 2px;
-    height: 2px;
-    background: #373b62;
-    top: -1px;
-    left: 50%;
 }
 
 .player-time {
@@ -270,55 +198,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 
-@media screen and (max-width: 1185px) {
-    .actions__player {
-        width: 100%;
-    }
-    .player__button {
-        margin-right: 1.4rem;
-    }
-    .custom__range [type=range] {
-        width: 50rem;
-    }
-}
-
-@media (max-width: 900px) {
-    .player__button {
-        margin-right: 1.6rem;
-    }
-    .custom__range [type=range] {
-        width: 40rem;
-    }
-}
-
-@media (max-width: 750px) {
-    .player__button {
-        margin-right: 1.8rem;
-    }
-    .custom__range [type=range] {
-         width: 30rem;
-     }
-}
-
-@media (max-width: 680px) {
-    .player__button {
-        margin-right: 2rem;
-    }
-    .custom__range [type=range] {
-        width: 20rem;
-    }
-}
-
-@media (max-width: 600px) {
-    .player__button {
-        margin-right: 2.2rem;
-    }
-    .custom__range [type=range] {
-        width: 12rem;
-    }
-    .actions__question__container--title {
-        font-size: 1rem;
-    }
+@media screen and (max-width: 768px) {
     .quiz__button {
         font-weight: 400;
         font-size: .8rem;
@@ -331,23 +211,5 @@ input[type=range]:focus::-ms-fill-upper {
         width: 1.4rem;
         height: 1.4rem;
         margin-left: 0.4rem;
-    }
-}
-
-@media (max-width:470px) {
-    .player__button {
-        margin-right: 2.5rem;
-    }
-    .custom__range [type=range] {
-        width: 9rem;
-    }
-    .actions__question__container--title {
-        font-size: .8rem;
-    }
-}
-
-@media (max-width: 320px) {
-    .custom__range [type=range] {
-        width: 8rem;
     }
 }
