--- a/src/components/general/FormRegistration.css
+++ b/src/components/general/FormRegistration.css
@@ -1,19 +1,4 @@
-* {
-    padding: 0;
-    margin: 0;
-    border: 0;
-    box-sizing: border-box;
-}
 
-h1 {
-    display: block;
-    font-size: 2em;
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-}
 
 .main-form {
     display: flex;
@@ -301,4 +286,33 @@ h1 {
         height: 1.8rem;
         margin-left: 0.6rem;
     }
+}
+
+@media screen and (max-width: 1440px) {
+
+}
+
+@media screen and (max-width: 1280px) {
+
+
+}
+
+@media screen and (max-width: 1024px) {
+
+}
+
+@media screen and (max-width: 768px) {
+
+}
+
+@media screen and (max-width: 425px) {
+
+}
+
+@media screen and (max-width:375px) {
+
+}
+
+@media screen and (max-width: 320px) {
+
 }
