--- a/src/components/general/ScoreView.css
+++ b/src/components/general/ScoreView.css
@@ -11,7 +11,7 @@
 
 .logo {
     position: absolute;
-    top: 5rem;
+    top: 3rem;
     left: 50%;
     transform: translateX(-50%);
     width: 13rem;
@@ -126,7 +126,8 @@ img {
     text-decoration: none;
 }
 
-@media (max-width: 1185px) {
+
+@media screen and (max-width: 1280px) {
     .modal_container {
         width: 85rem;
         height: 30rem;
@@ -169,10 +170,10 @@ img {
         height: 1.8rem;
         margin-left: 0.6rem;
     }
+
 }
 
-
-@media (max-width: 900px) {
+@media screen and (max-width: 1024px) {
     .modal_container {
         width: 55rem;
         height: 25rem;
@@ -217,7 +218,7 @@ img {
     }
 }
 
-@media (max-width: 600px) {
+@media screen and (max-width: 768px) {
     .modal_container {
         width: 30rem;
         height: 20rem;
@@ -263,4 +264,14 @@ img {
     }
 }
 
+@media screen and (max-width: 425px) {
 
+}
+
+@media screen and (max-width:375px) {
+
+}
+
+@media screen and (max-width: 320px) {
+
+}
