--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Arial', 'Promt',
     sans-serif;
@@ -26,7 +26,55 @@ body {
   -webkit-text-size-adjust: 100%;
   background-color: #12131e;
   overflow-y: visible;
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
+  max-width: 1440px;
+}
+
+h1 {
+  display: block;
+  font-size: 2em;
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
+
+h2 {
+  display: block;
+  font-size: 1.5em;
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
+
+.data__container ::-webkit-scrollbar {
+  width: 10px;
+}
+
+body ::-webkit-scrollbar, html ::-webkit-scrollbar {
+  width: 10px;
+}
+
+.data__container ::-webkit-scrollbar-thumb {
+  background: #373b62;
+  border-radius: 1rem;
+}
+
+body ::-webkit-scrollbar-thumb, html ::-webkit-scrollbar-thumb {
+  background: #373b62;
+  border-radius: 1rem;
+}
+
+.data__container ::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #373b62;
+  border-radius: 1rem;
+}
+body ::-webkit-scrollbar-track, html ::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #373b62;
+  border-radius: 1rem;
 }
 
 
