--- a/src/components/general/FormRegistration.css
+++ b/src/components/general/FormRegistration.css
@@ -302,15 +302,30 @@
 }
 
 @media screen and (max-width: 768px) {
-
+    .modal {
+        width: 90%;
+        height: 50%;
+        padding: 7rem 0;
+        border-radius: 0.7rem;
+    }
 }
 
 @media screen and (max-width: 425px) {
-
+    .modal {
+        width: 90%;
+        height: 50%;
+        padding: 7rem 0;
+        border-radius: 0.7rem;
+    }
 }
 
 @media screen and (max-width:375px) {
-
+    .modal {
+        width: 90%;
+        height: 50%;
+        padding: 7rem 0;
+        border-radius: 0.7rem;
+    }
 }
 
 @media screen and (max-width: 320px) {
